Fix scenario data bugs

--- a/scenario_content/campaigns/prototype/easy_scenario.yaml
+++ b/scenario_content/campaigns/prototype/easy_scenario.yaml
@@ -1,18 +1,18 @@
 ---
 ServerSpec:
   easyServer:
-    - initialStatus: online
-    - initialReason: OK
-    - hostname: easy_server
-    - users:
-        easyUser1:
-          userId: root
-          passwd: AUTO:dictionary
-          authMode: static
-          privilege:
-            read: true
-            write: true
-            execute: true
+    initialStatus: online
+    initialReason: OK
+    hostname: easy_server
+    users:
+      easyUser1:
+        userId: root
+        passwd: AUTO:dictionary
+        authMode: static
+        privilege:
+          read: true
+          write: true
+          execute: true
 Scenario:
   easyScenario:
     servers:
@@ -20,16 +20,16 @@ Scenario:
         specId: easyServer
         role: terminal
         interfaces:
-          - internet:
-              initiallyExposed: true
-  events:
-    easyScenarioWinEvent:
-      conditionType: privilegeAcquire
-      conditionArgs:
-        nodeId: easyScenario/easyServer
-        userId: root
-        privilege: execute
-      actions:
-        - actionType: print
-          actionArgs:
-            text: You passed [Easy] scenario!
+          - netId: internet
+            initiallyExposed: true
+    events:
+      easyScenarioWinEvent:
+        conditionType: privilegeAcquire
+        conditionArgs:
+          nodeId: easyScenario/easyServer
+          userKey: easyUser1
+          privilege: execute
+        actions:
+          - actionType: print
+            actionArgs:
+              text: You passed [Easy] scenario!
