--- a/scenario_content/campaigns/prototype/prototype_main.yaml
+++ b/scenario_content/campaigns/prototype/prototype_main.yaml
@@ -1,9 +1,9 @@
 ---
 campaigns:
-  - prototypeCampaign:
-      childCampaigns: []
-      scenarios:
-        - startScenario
-        - easyScenario
-        - mediumScenario
-        - hardScenario
+  prototypeCampaign:
+    childCampaigns: []
+    scenarios:
+      - startScenario
+      - easyScenario
+      - mediumScenario
+      - hardScenario
