--- a/Uplink2.csproj
+++ b/Uplink2.csproj
@@ -1,8 +1,9 @@
 <Project Sdk="Godot.NET.Sdk/4.6.1">
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <TargetFramework Condition=" '$(GodotTargetPlatform)' == 'android' ">net9.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
+    <TargetFramework Condition=" '$(GodotTargetPlatform)' == 'android' ">net10.0</TargetFramework>
     <EnableDynamicLoading>true</EnableDynamicLoading>
+    <DefaultItemExcludes>$(DefaultItemExcludes);.godot/**;tests/**</DefaultItemExcludes>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="YamlDotNet" Version="16.3.0" />
@@ -11,5 +12,6 @@
     <Compile Remove="src/MiniScript-cs/bin/**/*.cs" />
     <Compile Remove="src/MiniScript-cs/obj/**/*.cs" />
     <Compile Remove=".godot/**/*.cs" />
+    <Compile Remove="tests/**/*.cs" />
   </ItemGroup>
 </Project>
