Implement ExecutableHardCode Handlers / Implement world seed

--- a/scenario_content/campaigns/prototype/start_scenario.yaml
+++ b/scenario_content/campaigns/prototype/start_scenario.yaml
@@ -13,6 +13,13 @@ ServerSpec:
           read: true
           write: true
           execute: true
+    diskOverlay:
+      overlayEntries:
+        /opt/bin/miniscript:
+          entryKind: File
+          contentId: exec:miniscript
+          fileKind: ExecutableHardcode
+          size: 32000
 Scenario:
   startScenario:
     servers:
