--- a/scenario_content/campaigns/prototype/test_scenario.yaml
+++ b/scenario_content/campaigns/prototype/test_scenario.yaml
@@ -7,7 +7,7 @@ ServerSpec:
     users:
       testUser1:
         userId: root
-        passwd: AUTO:5c_numspecial
+        passwd: root
         authMode: static
         privilege:
           read: true
