Implement commandline history

--- a/scenario_content/campaigns/prototype/start_scenario.yaml
+++ b/scenario_content/campaigns/prototype/start_scenario.yaml
@@ -15,7 +15,7 @@ ServerSpec:
           execute: true
     diskOverlay:
       overlayEntries:
-        /opt/bin/miniscript:
+        /opt/bin/ms:
           entryKind: File
           contentId: exec:miniscript
           fileKind: ExecutableHardcode
