--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "godotTools.editorPath.godot4": "d:\\Users\\redbl\\Documents\\Godot_v4.6.1-stable_mono_win64\\Godot_v4.6.1-stable_mono_win64.exe"
+    "godotTools.editorPath.godot4": "d:\\Users\\redbl\\Documents\\Godot_v4.6.1-stable_mono_win64\\godot.exe"
 }
