--- a/scenario_content/campaigns/prototype/start_scenario.yaml
+++ b/scenario_content/campaigns/prototype/start_scenario.yaml
@@ -24,6 +24,14 @@ ServerSpec:
           entryKind: File
           contentId: res://scenario_content/resources/text/executions/password_breaker.ms
           fileKind: ExecutableScript
+        /password_breaker_hard.ms:
+          entryKind: File
+          contentId: res://prototype_answer/password_breaker_hard.ms
+          fileKind: Text
+        /fastconnect.ms:
+          entryKind: File
+          contentId: res://prototype_answer/fastconnect.ms
+          fileKind: Text
         /opt/bin/password_breaker.ms:
           entryKind: File
           contentId: res://scenario_content/resources/text/executions/password_breaker.ms
