Add docstrings for intrinsics / Add DocFX

--- a/scenario_content/campaigns/prototype/hard_scenario.yaml
+++ b/scenario_content/campaigns/prototype/hard_scenario.yaml
@@ -259,6 +259,8 @@ Scenario:
         specId: hardGuard1Server
         role: terminal
         interfaces:
+          - netId: internet
+            initiallyExposed: true
           - netId: hardSubnet
             initiallyExposed: false
       hardScenario/hardGuard2Server:
