--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,8 @@ mono_crash.*.json
 TestResults/
 
 TODO.md
+
+# DocFX generated outputs
+docfx_api_document/_site/
+docfx_api_document/api/.manifest
+docfx_api_document/api/*.yml
