Fix internal path to godot path

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -6,7 +6,7 @@ runnable=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.yaml,*.yml,*.txt,*.ms,*.bin"
 exclude_filter=""
 export_path="../NexusLink_export/NexusLink.exe"
 patches=PackedStringArray()
@@ -69,6 +69,6 @@ Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorActi
 ssh_remote_deploy/cleanup_script="Stop-ScheduledTask -TaskName godot_remote_debug -ErrorAction:SilentlyContinue
 Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorAction:SilentlyContinue
 Remove-Item -Recurse -Force '{temp_dir}'"
-dotnet/include_scripts_content=false
-dotnet/include_debug_symbols=true
+dotnet/include_scripts_content=true
+dotnet/include_debug_symbols=false
 dotnet/embed_build_outputs=false
